<resources>
    <string name="app_name">Martial Arts Club</string>
    <string name="action_add">Add Martial Art</string>
    <string name="action_delete">Delete Martial Art</string>
    <string name="action_update">Update Martial Art</string>

    <string name="add_name">Martial Art Name</string>
    <string name="add_price">Martial Art Price</string>
    <string name="add_color">Martial Art Color</string>

    <string name="add_btn">Add Martial Art</string>
    <string name="go_back">Go Back</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>